force-app/main/default/objects/Case/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <inlineHelpText>For Amber and Red cases, please describe the action plan for remediation.</inlineHelpText>
    <label>Action Plan</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>