force-app/main/default/objects/Case/fields/Adoption_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Percentage__c</fullName>
    <formula>Account.TBPS_Adoption_Percentage__c</formula>
    <label>Adoption Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>