force-app/main/default/objects/Case/fields/Backplane_replacement_phase__c.field-meta.xml
<CustomField>
    <fullName>Backplane_replacement_phase__c</fullName>
    <label>Backplane replacement phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>