force-app/main/default/objects/Case/fields/Case_Escalated_by_Client__c.field-meta.xml
<CustomField>
    <fullName>Case_Escalated_by_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case Escalated by Client</description>
    <label>Case Escalated by Client</label>
    <type>Checkbox</type>
</CustomField>