force-app/main/default/objects/Case/fields/Case_Partner__c.field-meta.xml
<CustomField>
    <fullName>Case_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>