force-app/main/default/objects/Case/fields/Client_Escalation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Escalation_Notes__c</fullName>
    <description>Client Escalation Notes</description>
    <label>Client Escalation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>