force-app/main/default/objects/Case/fields/Confidence_in_Completion_Date_Prior__c.field-meta.xml
<CustomField>
    <fullName>Confidence_in_Completion_Date_Prior__c</fullName>
    <description>This is a hidden field used to store the prior value of the Confidence in Completion Date.  This field is used in the E-Mail Alerts that are sent when the field changes.</description>
    <label>Confidence in Completion Date - Prior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>