force-app/main/default/objects/Case/fields/Contract_Number_Link_1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_Link_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related contract number to this case.</description>
    <inlineHelpText>Enter or search for an existing case number to relate to this case.</inlineHelpText>
    <label>Contract Number 1</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>