force-app/main/default/objects/Case/fields/Contract_Number_Link_2__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_Link_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related second contract number to this case.</description>
    <inlineHelpText>Enter or search for an existing case number to relate to this case.</inlineHelpText>
    <label>Contract Number 2</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Cases - Secondary</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>