force-app/main/default/objects/Case/fields/Created_by_IntApp_User__c.field-meta.xml
<CustomField>
    <fullName>Created_by_IntApp_User__c</fullName>
    <formula>IF(
   OR(
      CreatedBy.ProfileId=&quot;00e50000001Bf1Z&quot;,
      CreatedBy.ProfileId=&quot;00e50000001BeFL&quot;,
      CreatedBy.ProfileId=&quot;00e50000001BeFQ&quot;,
      CreatedBy.ProfileId=&quot;00e50000001Be7C&quot;,
      CreatedBy.ProfileId=&quot;00e50000001BeFV&quot;,
      CreatedBy.ProfileId=&quot;00e50000001BeFa&quot;,
      CreatedBy.ProfileId=&quot;00e50000001BeFf&quot;,
      CreatedBy.ProfileId=&quot;00e50000001BeFk&quot;,
      CreatedBy.ProfileId=&quot;00e50000001BboW&quot;
   ),
   FALSE,TRUE
)</formula>
    <label>Created by IntApp User</label>
    <type>Checkbox</type>
</CustomField>