force-app/main/default/objects/Case/fields/CRM_Security__c.field-meta.xml
<CustomField>
    <fullName>CRM_Security__c</fullName>
    <label>CRM Security</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>InterAction Matters Module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>