force-app/main/default/objects/Case/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please pick the CSM working on this case.</description>
    <inlineHelpText>Please pick the CSM working on this case.</inlineHelpText>
    <label>CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>