force-app/main/default/objects/Case/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <inlineHelpText>Date of Closure</inlineHelpText>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>