force-app/main/default/objects/Case/fields/DateOpen__c.field-meta.xml
<CustomField>
    <fullName>DateOpen__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>