force-app/main/default/objects/Case/fields/DB_Action__c.field-meta.xml
<CustomField>
    <fullName>DB_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DB Action</label>
    <type>Checkbox</type>
</CustomField>