force-app/main/default/objects/Case/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <description>BIZ-50209</description>
    <label>Deal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Bill To</fullName>
            </value>
            <value>
                <fullName>Calculations</fullName>
            </value>
            <value>
                <fullName>Customer Name</fullName>
            </value>
            <value>
                <fullName>Dates (Effective, Expiry, End)</fullName>
            </value>
            <value>
                <fullName>Deal Type</fullName>
            </value>
            <value>
                <fullName>Meter Type</fullName>
            </value>
            <value>
                <fullName>Missing MSSA</fullName>
            </value>
            <value>
                <fullName>Missing SOW</fullName>
            </value>
            <value>
                <fullName>Other Attachments</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Services Payment Terms</fullName>
            </value>
            <value>
                <fullName>SKU Error</fullName>
            </value>
            <value>
                <fullName>Subscription Payment Terms</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>