force-app/main/default/objects/Case/fields/Deal_Requests__c.field-meta.xml
<CustomField>
    <fullName>Deal_Requests__c</fullName>
    <description>Text field to capture the deal requests on case from the screen flow at time of case creation at time of amendments.
built according to US # 46097.
Used according to US # BIZ - 47758</description>
    <label>Deal Requests</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>