force-app/main/default/objects/Case/fields/Defective_Appliance_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Defective_Appliance_Date_Received__c</fullName>
    <description>Date the defective appliance was received</description>
    <label>Defective Appliance Date Received</label>
    <type>Date</type>
</CustomField>