force-app/main/default/objects/Case/fields/Escalation_Classification__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Classification__c</fullName>
    <description>SC-000036</description>
    <label>Escalation Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intapp Resource</fullName>
            </value>
            <value>
                <fullName>Customer Resource</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Scope Issue</fullName>
            </value>
            <value>
                <fullName>Over Promised Product Capability</fullName>
            </value>
            <value>
                <fullName>Billing Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>