force-app/main/default/objects/Case/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluation</label>
    <type>Checkbox</type>
</CustomField>