force-app/main/default/objects/Case/fields/Expected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start_Date__c</fullName>
    <description>Expected project start date.</description>
    <inlineHelpText>Expected project start date.</inlineHelpText>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>