force-app/main/default/objects/Case/fields/FeatureRequest_ImpactAssessment__c.field-meta.xml
<CustomField>
    <fullName>FeatureRequest_ImpactAssessment__c</fullName>
    <description>Impact Assessment for Feature Requests</description>
    <inlineHelpText>Please describe the impact of the current scenario on manual effort, increased processing time, or excess expense incurred.</inlineHelpText>
    <label>Impact Assessment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>