force-app/main/default/objects/Case/fields/FeatureRequest_Scenario__c.field-meta.xml
<CustomField>
    <fullName>FeatureRequest_Scenario__c</fullName>
    <description>Scenario/Business Case for a Feature Request</description>
    <inlineHelpText>Please describe the scenario or problem that occurs.</inlineHelpText>
    <label>Scenario</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>