force-app/main/default/objects/Case/fields/Handover_to_Support__c.field-meta.xml
<CustomField>
    <fullName>Handover_to_Support__c</fullName>
    <label>Handover to Support</label>
    <type>Date</type>
</CustomField>