force-app/main/default/objects/Case/fields/Has_Active_Project__c.field-meta.xml
<CustomField>
    <fullName>Has_Active_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Active Project</label>
    <type>Checkbox</type>
</CustomField>