force-app/main/default/objects/Case/fields/Hot_List_Stoplight_Status__c.field-meta.xml
<CustomField>
    <fullName>Hot_List_Stoplight_Status__c</fullName>
    <description>Select the current stoplight status of the Executive Support Case</description>
    <inlineHelpText>Select the current stoplight status of the Executive Support Case</inlineHelpText>
    <label>Client RAG Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#78C953</color>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Amber</fullName>
                <color>#F3D904</color>
                <label>Amber</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>