force-app/main/default/objects/Case/fields/Internal_Handover_to_PS__c.field-meta.xml
<CustomField>
    <fullName>Internal_Handover_to_PS__c</fullName>
    <label>Internal Handover to PS</label>
    <type>Date</type>
</CustomField>