force-app/main/default/objects/Case/fields/JIRA_Description__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Description__c</fullName>
    <label>JIRA Description</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>