force-app/main/default/objects/Case/fields/LDAP_Action__c.field-meta.xml
<CustomField>
    <fullName>LDAP_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LDAP Action</label>
    <type>Checkbox</type>
</CustomField>