force-app/main/default/objects/Case/fields/Loop_Action__c.field-meta.xml
<CustomField>
    <fullName>Loop_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loop Action</label>
    <type>Checkbox</type>
</CustomField>