force-app/main/default/objects/Case/fields/Managing_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Managing_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managing Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>