force-app/main/default/objects/Case/fields/Network_Config__c.field-meta.xml
<CustomField>
    <fullName>Network_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Network Config</label>
    <type>Checkbox</type>
</CustomField>