force-app/main/default/objects/Case/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <description>BIZ-50209</description>
    <label>Other</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instruction Notes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>