force-app/main/default/objects/Case/fields/Partner_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Partner_Engagement__c</fullName>
    <label>Partner Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not identified</fullName>
            </value>
            <value>
                <fullName>Identified</fullName>
            </value>
            <value>
                <fullName>Subcontracted</fullName>
            </value>
            <value>
                <fullName>Prime (led)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>