force-app/main/default/objects/Case/fields/Phase_4_Actual__c.field-meta.xml
<CustomField>
    <fullName>Phase_4_Actual__c</fullName>
    <description>SC-000036</description>
    <label>Phase 4: Actual %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>