force-app/main/default/objects/Case/fields/Phase_4_Forecasted_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_4_Forecasted_End_Date__c</fullName>
    <description>SC-000036</description>
    <inlineHelpText>Phase 4: Deployment</inlineHelpText>
    <label>Phase 4: Forecasted End Date</label>
    <type>Date</type>
</CustomField>