force-app/main/default/objects/Case/fields/Phase_5_Forecasted_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_5_Forecasted_End_Date__c</fullName>
    <description>SC-000036</description>
    <inlineHelpText>Phase 5: Ongoing Support</inlineHelpText>
    <label>Phase 5: Forecasted End Date</label>
    <type>Date</type>
</CustomField>