force-app/main/default/objects/Case/fields/Product_LineNew__c.field-meta.xml
<CustomField>
    <fullName>Product_LineNew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line New</label>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>Cases (Product Line)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>